Narrow down ambiguous Arno station locations

--- a/Arno_Places.ipynb
+++ b/Arno_Places.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2284,11 +2284,186 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Duplicates?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Place</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Alt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Firenze</td>\n",
+       "      <td>43.771512</td>\n",
+       "      <td>11.264566</td>\n",
+       "      <td>48.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Firenze</td>\n",
+       "      <td>43.779197</td>\n",
+       "      <td>11.258056</td>\n",
+       "      <td>50.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Firenze</td>\n",
+       "      <td>43.798788</td>\n",
+       "      <td>11.251140</td>\n",
+       "      <td>84.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Incisa</td>\n",
+       "      <td>43.612661</td>\n",
+       "      <td>11.427217</td>\n",
+       "      <td>315.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Incisa</td>\n",
+       "      <td>43.689849</td>\n",
+       "      <td>11.456191</td>\n",
+       "      <td>108.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Incisa</td>\n",
+       "      <td>43.650094</td>\n",
+       "      <td>11.392472</td>\n",
+       "      <td>500.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Le Croci</td>\n",
+       "      <td>44.007030</td>\n",
+       "      <td>11.271254</td>\n",
+       "      <td>388.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Le Croci</td>\n",
+       "      <td>43.944755</td>\n",
+       "      <td>11.213740</td>\n",
+       "      <td>421.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Vernio</td>\n",
+       "      <td>44.056676</td>\n",
+       "      <td>11.120557</td>\n",
+       "      <td>695.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Vernio</td>\n",
+       "      <td>44.036938</td>\n",
+       "      <td>11.149634</td>\n",
+       "      <td>349.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Place        Lat        Lng     Alt\n",
+       "0   Firenze  43.771512  11.264566   48.00\n",
+       "1   Firenze  43.779197  11.258056   50.00\n",
+       "2   Firenze  43.798788  11.251140   84.00\n",
+       "3    Incisa  43.612661  11.427217  315.00\n",
+       "4    Incisa  43.689849  11.456191  108.42\n",
+       "5    Incisa  43.650094  11.392472  500.00\n",
+       "6  Le Croci  44.007030  11.271254  388.00\n",
+       "7  Le Croci  43.944755  11.213740  421.00\n",
+       "8    Vernio  44.056676  11.120557  695.00\n",
+       "9    Vernio  44.036938  11.149634  349.00"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dupes = pd.DataFrame({\n",
+    "    'Place': ['Firenze', 'Firenze', 'Firenze',\n",
+    "              'Incisa', 'Incisa', 'Incisa',\n",
+    "              'Le Croci', 'Le Croci', 'Vernio', 'Vernio'],\n",
+    "    'Lat': [43.771512, 43.779197, 43.798788,\n",
+    "            43.612661, 43.689849, 43.650094,\n",
+    "            44.007030, 43.944755, 44.056676, 44.036938],\n",
+    "    'Lng': [11.264566, 11.258056, 11.251140,\n",
+    "            11.427217, 11.456191, 11.392472,\n",
+    "            11.271254, 11.213740, 11.120557, 11.149634],\n",
+    "    'Alt': [48, 50, 84, 315, 108.42, 500, 388, 421, 695, 349]\n",
+    "})\n",
+    "dupes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(43.612661, 11.120557, 44.056676, 11.456191)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(dupes['Lat']), min(dupes['Lng']), max(dupes['Lat']), max(dupes['Lng'])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# thank you uMap\n",
+    "# Firenze: B\n",
+    "# Incisa: B\n",
+    "# Le Croci: A\n",
+    "# Vernio: B"
+   ]
   }
  ],
  "metadata": {
