Add section on detailing the usefulness of the features

--- a/mvp.ipynb
+++ b/mvp.ipynb
@@ -877,6 +877,203 @@
     "prediction = SimpleLinearPredictor().fit(auser.getX(), auser.gety()).predict()\n",
     "auser.unscale(prediction)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Features & Their Usefulness"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aquifer Auser\n",
+    "\n",
+    "- `Rainfall_Gallicano` -- As far as I know, rainfall is helpful\n",
+    "- `Rainfall_Pontetetto`\n",
+    "- `Rainfall_Monte_Serra`\n",
+    "- `Rainfall_Orentano`\n",
+    "- `Rainfall_Borgo_a_Mozzano`\n",
+    "- `Rainfall_Piaggione`\n",
+    "- `Rainfall_Calavorno`\n",
+    "- `Rainfall_Croce_Arcana`\n",
+    "- `Rainfall_Tereglio_Coreglia_Antelminelli`\n",
+    "- `Rainfall_Fabbriche_di_Vallico`\n",
+    "- `Depth_to_Groundwater_PAG` -- As far as I know, depth to groundwater is helpful\n",
+    "- `Depth_to_Groundwater_DIEC`\n",
+    "- `Temperature_Orentano` -- As far as I know, temperature is helpful (but what if we don't have corresponding rainfall data?)\n",
+    "- `Temperature_Monte_Serra`\n",
+    "- `Temperature_Ponte_a_Moriano`\n",
+    "- `Temperature_Lucca_Orto_Botanico`\n",
+    "- `Volume_POL` -- ??? My guess is volume is not helpful\n",
+    "- `Volume_CC1`\n",
+    "- `Volume_CC2`\n",
+    "- `Volume_CSA`\n",
+    "- `Volume_CSAL`\n",
+    "- `Hydrometry_Monte_S_Quirico` -- Depending on how this differs from depth to groundwater, hydrometry is helpful\n",
+    "- `Hydrometry_Piaggione`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aquifer Doganella\n",
+    "\n",
+    "- `Rainfall_Monteporzio`\n",
+    "- `Rainfall_Velletri`\n",
+    "- `Volume_Pozzo_1`\n",
+    "- `Volume_Pozzo_2`\n",
+    "- `Volume_Pozzo_3`\n",
+    "- `Volume_Pozzo_4`\n",
+    "- `Volume_Pozzo_5+6`\n",
+    "- `Volume_Pozzo_7`\n",
+    "- `Volume_Pozzo_8`\n",
+    "- `Volume_Pozzo_9`\n",
+    "- `Temperature_Monteporzio`\n",
+    "- `Temperature_Velletri`\n",
+    "\n",
+    "Rainfall + temperature, AFAIK, are helpful.\n",
+    "\n",
+    "Volume refers to amount of water taken at a treament facility; unless this amount is dictated by how much is available, how can this help?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aquifer Luco\n",
+    "\n",
+    "- `Rainfall_Simignano`\n",
+    "- `Rainfall_Siena_Poggio_al_Vento`\n",
+    "- `Rainfall_Mensano`\n",
+    "- `Rainfall_Montalcinello`\n",
+    "- `Rainfall_Monticiano_la_Pineta`\n",
+    "- `Rainfall_Sovicille`\n",
+    "- `Rainfall_Ponte_Orgia`\n",
+    "- `Rainfall_Scorgiano`\n",
+    "- `Rainfall_Pentolina`\n",
+    "- `Rainfall_Monteroni_Arbia_Biena`\n",
+    "- `Depth_to_Groundwater_Pozzo_1`\n",
+    "- `Depth_to_Groundwater_Pozzo_3`\n",
+    "- `Depth_to_Groundwater_Pozzo_4`\n",
+    "- `Temperature_Siena_Poggio_al_Vento`\n",
+    "- `Temperature_Mensano`\n",
+    "- `Temperature_Pentolina`\n",
+    "- `Temperature_Monteroni_Arbia_Biena`\n",
+    "- `Volume_Pozzo_1`\n",
+    "- `Volume_Pozzo_3`\n",
+    "- `Volume_Pozzo_4`\n",
+    "\n",
+    "See notes on other aquifers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aquifer Petrignano\n",
+    "\n",
+    "- `Rainfall_Bastia_Umbra`\n",
+    "- `Temperature_Bastia_Umbra`\n",
+    "- `Temperature_Petrignano`\n",
+    "- `Volume_C10_Petrignano`\n",
+    "- `Hydrometry_Fiume_Chiascio_Petrignano` -- Dataset description file has this as groundwater level (ie, for an aquifer); but \"fiume\" is Italian for \"river\", so is it actually stage? If it's actually river level, surely this isn't helpful?\n",
+    "\n",
+    "See notes for other aquifers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Water Spring Amiata\n",
+    "\n",
+    "- `Rainfall_Castel_del_Piano`\n",
+    "- `Rainfall_Abbadia_S_Salvatore`\n",
+    "- `Rainfall_S_Fiora`\n",
+    "- `Rainfall_Laghetto_Verde`\n",
+    "- `Rainfall_Vetta_Amiata`\n",
+    "- `Depth_to_Groundwater_S_Fiora_8`\n",
+    "- `Depth_to_Groundwater_S_Fiora_11bis`\n",
+    "- `Depth_to_Groundwater_David_Lazzaretti`\n",
+    "- `Temperature_Abbadia_S_Salvatore`\n",
+    "- `Temperature_S_Fiora`\n",
+    "- `Temperature_Laghetto_Verde`\n",
+    "\n",
+    "As far as I know (and before I've plotted them all), these are all helpful features.\n",
+    "\n",
+    "\"Therefore, the groundwater level in the study area is more sensitive to temperature than to rainfall.\" --[Impact of temperature changes on groundwater levels... in Bangladesh](https://www.jstage.jst.go.jp/article/hrl/11/1/11_85/_pdf/-char/en)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Water Spring Lupa\n",
+    "\n",
+    "- `Rainfall_Terni`\n",
+    "\n",
+    "Again, as far as I know, this is a useful feature; but we could recommend *more* useful feature types (Temp, Depth to Groundwater) depending on our research"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Water Spring Madonna di Canneto\n",
+    "\n",
+    "- `Rainfall_Settefrati`\n",
+    "- `Temperature_Settefrati`\n",
+    "\n",
+    "Both helpful (depending on location relative to where flow rate is measured)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lake Bilancino\n",
+    "\n",
+    "- `Rainfall_S_Piero` **Not helpful.** Located on the river \"after\" the lake\n",
+    "- `Rainfall_Mangona` **Helpful, but** Located far (5+km) from the lake\n",
+    "- `Rainfall_S_Agata` **Helpful.** Located <5km from lake\n",
+    "- `Rainfall_Cavallina` **Helpful.** Located right on the lake\n",
+    "- `Rainfall_Le_Croci` **Helpful.** Located right next to the lake\n",
+    "- `Temperature_Le_Croci` **Helpful.** Located right next to the lake"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arno River\n",
+    "\n",
+    "- `Rainfall_Le_Croci` **Not helpful.** Separated from Arno by another system of water (Lake Bilancino)\n",
+    "- `Rainfall_Cavallina` **Not helpful.** Separated from Arno by another system of water (Lake Bilancino)\n",
+    "- `Rainfall_S_Agata` **Not helpful.** Separated from Arno by another system of water (Lake Bilancino), and some distance away from that one as well\n",
+    "- `Rainfall_Mangona` **Not helpful.** Separated from Arno by another system of water (Lake Bilancino), and some distance away from that one as well\n",
+    "- `Rainfall_S_Piero` **Not helpful.** Separated from Arno by another system of water (River Sieve)\n",
+    "- `Rainfall_Vernio` **Not helpful.** Located on a river (Bisenzio) that feeds into Arno *after* location where stage is measured\n",
+    "- `Rainfall_Stia` **Helpful.** Located right on the Arno\n",
+    "- `Rainfall_Consuma` **Not helpful.** Located too far away from Arno\n",
+    "- `Rainfall_Incisa` **Helpful.** Located right on the Arno\n",
+    "- `Rainfall_Montevarchi` **Helpful.** Located right on the Arno\n",
+    "- `Rainfall_S_Savino` **Not helpful.** Located too far away from Arno\n",
+    "- `Rainfall_Laterina` **Helpful.** Located right on the Arno\n",
+    "- `Rainfall_Bibbiena` **Helpful.** Located very close to the Arno\n",
+    "- `Rainfall_Camaldoli` **Not helpful.** Located too far away from Arno\n",
+    "- `Temperature_Firenze` **Not helpful.** Located too far away from where stage is measured for temperature to be useful"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
