Add a fun picture guide of the water cycle to our final notebook

--- a/mvp.ipynb
+++ b/mvp.ipynb
@@ -24,6 +24,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# The Water Cycle\n",
+    "\n",
+    "**Step 1**: Water falls out of the sky.\n",
+    "\n",
+    "![Step 1 of the water cycle](images/cycle1.png)\n",
+    "\n",
+    "**Step 2**: Water lands on the ground.\n",
+    "\n",
+    "![Step 2 of the water cycle](images/cycle2.png)\n",
+    "\n",
+    "Depending on where the water lands, it will either:\n",
+    "\n",
+    "- 3a: Absorb into the soil\n",
+    "- 3b: Flow downhill\n",
+    "\n",
+    "**Step 3a**: The ground soaks up the water.\n",
+    "\n",
+    "Nearby plants will drink the water; otherwise, the water stays underground as an **aquifer**.\n",
+    "\n",
+    "![Step 3a of the water cycle](images/cycle3a.png)\n",
+    "\n",
+    "Sometimes, this groundwater will move through the land and come back out as a **water spring**.\n",
+    "\n",
+    "![Step 3a2 of the water cycle](images/cycle3a2.png)\n",
+    "\n",
+    "**Step 3b**: The ground *doesn't* soak up the water.\n",
+    "\n",
+    "If the ground doesn't have little holes that water can soak into (eg, paved concrete, quartz, shale), or if the ground is already filled up with water, then the water will simply flow downhill and settle into the lowest part of the land.\n",
+    "\n",
+    "![Step 3b of the water cycle](images/cycle3b.png)\n",
+    "\n",
+    "A **river** eventually flows into an ocean. A **lake** might connect to a river, or it might just be an isolated body of water.\n",
+    "\n",
+    "**Step 4**: While the water is sitting in a lake or flowing in a river, sunlight heats it up and causes some of it to float back into the sky.\n",
+    "\n",
+    "![Step 4 of the water cycle](images/cycle4.png)\n",
+    "\n",
+    "**Step 5**: And, of course, people can **remove** water from aquifers, springs, rivers, and lakes\n",
+    "\n",
+    "![Step 5 of the water cycle](images/cycle5.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How does this help us?\n",
+    "\n",
+    "We can predict the amount of water in an **aquifer** if we know the following details:\n",
+    "\n",
+    "- How much water fell from the sky?\n",
+    "- How **porous** and **permeable** is the ground it landed on?\n",
+    "- How much of that water was soaked up by vegetation?\n",
+    "- How empty was the aquifer when the water fell? In other words, how much **space** was available for groundwater recharge?\n",
+    "- How much water evaporated before it could soak into the ground?\n",
+    "\n",
+    "We can predict the amount of water a **water spring** can give us if we know the following details:\n",
+    "\n",
+    "- How much water is available from the groundwater? (Is the aquifer full? Empty?)\n",
+    "- How fast does the water flow underground?\n",
+    "- How much water is taken out before it can get to the spring?\n",
+    "\n",
+    "And we can predict the amount of water in a **lake** or **river** if we know the following details:\n",
+    "\n",
+    "- How much water fell out of the sky?\n",
+    "- How much water was lost to groundwater recharge or vegetation?\n",
+    "- How much water evaporated away?\n",
+    "- How much water was removed before we could measure it?\n",
+    "- How much water comes from other **tributaries**, other lakes, rivers, springs, and aquifers?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This notebook is designed first and foremost to make implementation and practical use of the models as quick as possible. Many technical points are hand-waved away behind convenience classes. But the overall effect of the code is explained as well, so that the techniques could be applied in any programming context."
    ]
   },
