Develop basic models for predicting amount of water

--- a/mvp.ipynb
+++ b/mvp.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "**Step 3b**: The ground *doesn't* soak up the water.\n",
     "\n",
-    "If the ground doesn't have little holes that water can soak into (eg, paved concrete, quartz, shale), or if the ground is already filled up with water, then the water will simply flow downhill and settle into the lowest part of the land.\n",
+    "If the ground doesn't have little holes that water can soak into (eg, paved concrete, quartz, shale), or if the ground is already saturated with water, then the water will simply flow downhill (\"**runoff**\") and settle into the lowest part of the land.\n",
     "\n",
     "![Step 3b of the water cycle](images/cycle3b.png)\n",
     "\n",
@@ -79,6 +79,7 @@
     "- How much of that water was soaked up by vegetation?\n",
     "- How empty was the aquifer when the water fell? In other words, how much **space** was available for groundwater recharge?\n",
     "- How much water evaporated before it could soak into the ground?\n",
+    "- How much water was removed from the aquifer?\n",
     "\n",
     "We can predict the amount of water a **water spring** can give us if we know the following details:\n",
     "\n",
@@ -93,6 +94,45 @@
     "- How much water evaporated away?\n",
     "- How much water was removed before we could measure it?\n",
     "- How much water comes from other **tributaries**, other lakes, rivers, springs, and aquifers?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basic Models & Equations\n",
+    "\n",
+    "Aquifers, water springs, lakes, and rivers can all be thought of generally as **water systems**. In order to model the amount of water in a system, we start with a fundamental truth:\n",
+    "\n",
+    "*Every drop of water that falls out of the sky either (a) goes underground, (b) stays above ground, or (c) floats back up to the sky.*\n",
+    "\n",
+    "This means that we can use the following equation to account for each of those drops of water:\n",
+    "\n",
+    "$$\n",
+    "P = G + R + E\n",
+    "$$\n",
+    "\n",
+    "where:\n",
+    "\n",
+    "- $P$ is precipitation\n",
+    "- $G$ is groundwater recharge\n",
+    "- $R$ is surface runoff (this includes lake and river water)\n",
+    "- $E$ is evaporation (this includes water used by vegetation; technically, it is \"evapotranspiration\")\n",
+    "\n",
+    "Howard Penman developed a model in 1948 for evaporation over an open body of water ($E_{P}$); John Monteith later adjusted it for use over land with vegetation ($E_{PM}$).\n",
+    "\n",
+    "Runoff from a groundwater system ($R_{G}$) can be written as a function of precipitation $P$ and that system's current level of saturation, or $\\frac{G_{current}}{G_{max}}$. Based on the locations of hydrological stations used to create the data given in this competition, the amount of precipitation a surface water system loses to nearby groundwater recharge can be considered $0$.\n",
+    "\n",
+    "In order to use the above equation for all of our different water systems, we rewrite it like so:\n",
+    "\n",
+    "$$\n",
+    "G = P - E_{PM} - R_{G}(P, \\frac{G_{current}}{G_{max}})\n",
+    "$$\n",
+    "$$\n",
+    "R = P - E_{P}\n",
+    "$$\n",
+    "\n",
+    "The first equation tells us how to calculate levels for groundwater, the second for surface water (*prior* to humans removing water from the systems for consumption)."
    ]
   },
   {
