Flail about hoping for a miracle

--- a/mvp.ipynb
+++ b/mvp.ipynb
@@ -121,18 +121,39 @@
     "\n",
     "Howard Penman developed a model in 1948 for evaporation over an open body of water ($E_{P}$); John Monteith later adjusted it for use over land with vegetation ($E_{PM}$).\n",
     "\n",
-    "Runoff from a groundwater system ($R_{G}$) can be written as a function of precipitation $P$ and that system's current level of saturation, or $\\frac{G_{current}}{G_{max}}$. Based on the locations of hydrological stations used to create the data given in this competition, the amount of precipitation a surface water system loses to nearby groundwater recharge can be considered $0$.\n",
+    "Runoff from a groundwater system ($R_{G}$) can be written as a function of precipitation $P$ and that system's current level of saturation, or $\\frac{G_{current}}{G_{max}}$. A similar function, say $G_{R}$, can be used to calculate the amount of recharge, *not* including runoff.\n",
     "\n",
-    "In order to use the above equation for all of our different water systems, we rewrite it like so:\n",
+    "We therefore modify the above equation taking into account all of these details and also the different types of water systems.\n",
     "\n",
     "$$\n",
     "G = P - E_{PM} - R_{G}(P, \\frac{G_{current}}{G_{max}})\n",
     "$$\n",
     "$$\n",
-    "R = P - E_{P}\n",
+    "R = P - E_{P} - G_{R}(P, \\frac{G_{current}}{G_{max}})\n",
     "$$\n",
     "\n",
     "The first equation tells us how to calculate levels for groundwater, the second for surface water (*prior* to humans removing water from the systems for consumption)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Surface Water Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lake Bilancino -- Lake Level & Flow Rate\n",
+    "\n",
+    "Feature | Location(s)\n",
+    "--- | ---\n",
+    "Rainfall | S. Piero, Mangona, S. Agata, Cavallina, Le Croci\n",
+    "Temperature | Le Croci\n",
+    "\n",
+    "![Lake Bilancino monitoring stations](images/bilancino_stations.png)"
    ]
   },
   {
