--- a/notebooks/nulls?/why_are_they_null.ipynb
+++ b/notebooks/nulls?/why_are_they_null.ipynb
@@ -447,9 +447,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "acea_conda",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "acea_conda"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -461,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
