final commit; may others come and do it better

--- a/mvp.ipynb
+++ b/mvp.ipynb
@@ -216,44 +216,106 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# please do not read this code it is scary and unenlightening\n",
-    "def drop_where_null(df, col):\n",
-    "    return df[~df[col].isnull()]\n",
+    "def drop_null_date(df):\n",
+    "    return df[~df['Date'].isnull()]\n",
     "\n",
-    "def date_as_index(df, col, format):\n",
-    "    df.index = pd.to_datetime(df[col], format=format)\n",
+    "def date_as_index(df, pattern):\n",
+    "    as_dt = pd.to_datetime(df['Date'], format=pattern)\n",
+    "    df.index = as_dt\n",
+    "    \n",
+    "    # clean up index\n",
     "    df.index.name = None\n",
     "    df.index.freq = 'D'\n",
+    "    \n",
     "    return df.drop(col, axis=1)\n",
     "\n",
-    "def start_after(df, y, m, d):\n",
-    "    return df[df.index > datetime(y, m, d)]\n",
+    "\n",
+    "def start_after(df, yr, mo, day):\n",
+    "    cutoff = pd.Timestamp(yr, mo, day)\n",
+    "    mask = df.index > cutoff\n",
+    "    return df[mask]\n",
+    "\n",
     "\n",
     "def trim_to_targets(df, y):\n",
+    "    \n",
+    "    # for each target y, find the first\n",
+    "    # and last rows where they AREN'T null\n",
+    "    \n",
+    "    # first eliminate nulls\n",
     "    notnulls = [df[~df[c].isnull()] for c in y]\n",
+    "    \n",
+    "    # only save the first and last dates from this data\n",
     "    ends = [(nn.iloc[0].name, nn.iloc[-1].name) for nn in notnulls]\n",
+    "    \n",
+    "    # separate this data so that all the \"firsts\"\n",
+    "    # are in one list, and all the \"lasts\" are in another\n",
     "    firsts, lasts = zip(*ends)\n",
+    "    \n",
+    "    # use the LATEST \"first\" and the EARLIEST\n",
+    "    # \"last\" to trim the entire dataset\n",
     "    return df.loc[max(firsts):min(lasts)]\n",
     "\n",
+    "\n",
     "def reimpute_targets(df, y):\n",
+    "    \n",
+    "    # a 0 in the target is *always*\n",
+    "    # a standin for missing data;\n",
+    "    # make this missingness explicit\n",
     "    for c in y:\n",
     "        df[c] = df[c].replace(0, float('nan'))\n",
+    "    \n",
     "    return df\n",
+    "\n",
     "\n",
     "def discard_sparse_features(df, x, thresh):\n",
+    "    \n",
+    "    # if a given feature has too many\n",
+    "    # nulls, just drop the column entirely\n",
     "    todrop = []\n",
+    "    \n",
     "    for c in x:\n",
-    "        ratio = df[c].isnull().sum() / df.shape[0]\n",
+    "        \n",
+    "        # get this column's missingness ratio\n",
+    "        missing = df[c].isnull().sum()\n",
+    "        total = df.shape[0]\n",
+    "        ratio = missing / total\n",
+    "        \n",
+    "        # compare to threshold parameter\n",
     "        if ratio >= thresh:\n",
     "            todrop.append(c)\n",
+    "    \n",
     "    return df.drop(todrop, axis=1)\n",
     "\n",
+    "\n",
     "def absolute_columns(df, begs):\n",
-    "    cols = sum([[c for c in df.columns if c.startswith(b)] for b in begs], [])\n",
+    "    \n",
+    "    # some columns in the datasets have negative values;\n",
+    "    # per Acea Group, the negative was used internally,\n",
+    "    # but the actual values should be positive\n",
+    "    \n",
+    "    # \"begs\" gives us the prefixes of all columns\n",
+    "    # that should be absolute-valued\n",
+    "    \n",
+    "    # get all columns that start with each \"beg\":\n",
+    "    list_of_cols = [c for c in df.columns if c.startswith(b)] for b in begs\n",
+    "    \n",
+    "    # this list has each column grouped by prefix;\n",
+    "    # we only want a single list containing ALL columns\n",
+    "    cols = sum(list_of_cols, [])\n",
+    "    \n",
+    "    # convert each of these columns\n",
     "    for c in cols:\n",
     "        df[c] = df[c].abs()\n",
-    "    return df\n",
-    "\n",
+    "        \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def multiply_impute(df):               # USES RANDOMNESS\n",
     "    kernel = mf.MultipleImputedKernel(\n",
     "        data=df,\n",
@@ -1235,7 +1297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
